--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  flutter_native_splash: ^2.2.19
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
@@ -17,5 +18,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
+  assets:
+    - assets/images/
   uses-material-design: true
 
