--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,23 +2,24 @@ name: object_detection_app
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.19.2 <3.0.0'
+environment:
+  sdk: ">=2.19.2 <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
-  flutter: 
+  flutter:
     sdk: flutter
   flutter_native_splash: ^2.2.19
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.1
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   assets:
     - assets/images/
   uses-material-design: true
-
