--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
   image_picker: ^0.8.7+5
+  get_storage: ^2.1.1
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
